# eggbot-discord

./: .pre-commit-config.yaml  Makefile  README.md  application.ini  pyproject.toml  requirements.in  requirements.txt  setup.cfg  tox.ini
.github/workflows/: python-tests.yml
eggbot/model/: chat_message.py  chat_response.py  db_store_intfc.py  deferred_task.py  moderation_action.py
eggbot/module/: chat_module_intf.py  keyword_notifi.py
eggbot/provider/: db_connector.py  dbconn.py  deferred_task_db.py  moderation_action_db.py
eggbot/util/: string_util.py
src/eggbot/: bot.py
src/eggbot/model/: chat_message.py  db_store_intfc.py  deferred_task.py
src/eggbot/provider/: db_connector.py
src/eggbot/util/: string_util.py
tests/module/: keyword_notifi_test.py
tests/provider/: db_connector_test.py  dbconn_test.py  deferred_task_db_test.py  moderation_action_db_test.py
tests/util/: string_util_test.py
